# outris-cli

./: .gitignore  .outris_aliases.sh  BUILD_COMPLETE.md  Outrs_cli_setup_guide.md  QUICKSTART.md  README.md  pyproject.toml  setup.sh
outris/: __init__.py  client.py  config.py  main.py
outris/commands/: __init__.py  api.py  auth.py  marketplace.py  query.py  team.py
outris/utils/: __init__.py  formatters.py  validators.py
tests/: __init__.py  test_api.py  test_auth.py  test_client.py
